# agent-mon

./: .gitignore  DESIGN.md  README.md  SLACK_INTEGRATION_PLAN.md  agent-mon.service  config.yaml  install.sh  pyproject.toml
.github/workflows/: deploy.yml
agent_mon/: __init__.py  agent.py  cli.py  config.py  hooks.py  memory.py  prompt.py
agent_mon/tools/: __init__.py  alerts.py  cpu.py  disk.py  io.py  memory.py  processes.py  remediation.py  security.py  system.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_hooks.py  test_memory.py  test_prompt.py
tests/tools/: test_alerts.py  test_cpu.py  test_disk.py  test_io.py  test_memory.py  test_processes.py  test_remediation.py  test_security.py  test_system.py
